feat: replaced SearchPaymentMethods to SearchPaymentMethod
